fix: 优化collapse

--- a/src/packages/collapse/index.scss
+++ b/src/packages/collapse/index.scss
@@ -5,7 +5,6 @@ $transition-delay: 0.55s;
 .t-collapse {
     border-bottom: 1px solid border-color(0.3);
     min-width: 100px;
-    padding: 6px;
     box-sizing: border-box;
     transition: 0.22s;
 
@@ -34,6 +33,8 @@ $transition-delay: 0.55s;
         cursor: pointer;
         padding-bottom: 6px;
         font-size: 14px;
+        min-height: 32px;
+
 
         ._t-collapse-head-right {
             display: flex;
